heading and paragraph

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <p>Replace this content with your own.</p>
+    <hi> Heading Example </hi>
+    <p> Paragraph </p>
   </body>
 </html>
