halloween recipe correction

--- a/lists.html
+++ b/lists.html
@@ -30,3 +30,6 @@
     <li>In a pot, bring water to a simmer. Place bowl with chocolate chunks on top of the pot, stir constantly until chocolate is almost completely melted (lumps will remain), remove from the heat, stir until completely smooth.
     <li>Poor chocolate over the cookie sheet, covering the filling. Sprinkle with candy corn and Halloween colored sprinkles. Let cool at room temperature until hardened. Break into pieces and serve!
 </ol>
+
+ </body>
+</html>
