fix bird gallery

--- a/Bird Gallery/gallery.html
+++ b/Bird Gallery/gallery.html
@@ -6,10 +6,14 @@
    </head>
    <body>
      <h1> Gallery </h1>
-     <p> Bird Gallery</p>
+     <p>Bird Gallery</p>
+
+<table>
+
+<th>
 
 <figure>
-     <a href="images/bird1.jpg">
+<a href="images/bird1.jpg">
 <img src="images/tn-bird1.jpg" alt="tn-bird1.jpg"width="200" height="133" /></a>
 <figcaption>Figure 1: This is a Sea Bird.</figcaption>
 
@@ -21,13 +25,20 @@
 <figure>
 <a href="images/bird3.jpg">
 <img src="images/tn-bird3.jpg" alt="tn-bird3.jpg"width="200" height="133" /></a>
-<figcaption>Figure 2: This is a White Blue Bird.</figcaption>
+<figcaption>Figure 3: This is a White Blue Bird.</figcaption>
    
 <figure>
 <a href="images/bird4.jpg">
 <img src="images/tn-bird4.jpg" alt="tn-bird4.jpg"width="200" height="133" /></a>
-<figcaption>Figure 2: This is a White Owl.</figcaption>
-      
+<figcaption>Figure 4: This is a White Owl.</figcaption>
+
+</th>
+
+</table>
+
 <cite> Elimarie Morales Santiago</cite>   
+
    </body>
+   
 </html>
+
