--- a/B8 Assignment HTML5 Layout and Tables/html5-layout-tables.html
+++ b/B8 Assignment HTML5 Layout and Tables/html5-layout-tables.html
@@ -98,7 +98,10 @@ See also Introduction to Ten Pin Bowling
 
 <p>A bowls tournament in Berrigan, New South Wales, Australia
 Another form of bowling is usually played outdoors on a lawn. At outdoor bowling, the players throw a ball, which is sometimes eccentrically weighted, in an attempt to put it closest to a designated point or slot in the bowling arena. Included in the outdoor category:</p>
-
+<span></span>
+ <br>
+ <br>
+ </br>
 <div class="tournaments" >
   <table>
   <tr>
@@ -130,6 +133,10 @@ Another form of bowling is usually played outdoors on a lawn. At outdoor bowling
  </div>
             
  </aside>
+ <span></span>
+ <br>
+ <br>
+ </br>
 <footer>
 <div id="cite">
 <cite>From Wikipedia, the free encyclopedia</cite>
