--- a/B10 Project Final Project/activities.html
+++ b/B10 Project Final Project/activities.html
@@ -14,12 +14,12 @@
   <div class="header"><a href="#"><img src="images/logofront.png" alt="logo" width="961" height="304" /></a></a></div>
   
 <div class="sidebar1">
-  <ul class="nav">
-   <li><a href="home.html" title="home" target="_blank">Home</a></li>
-   <li><a href="menu.html" title="menu" target="_blank">Menu</a></li>
-   <li><a href="activities.html" title="activities" target="_blank">Activities Room</a></li>
-   <li><a href="contact.html" title="contact" target="_blank">Contact</a></li>
-  </ul>
+   <ul class="nav">
+      <li><a href="home.html" title="home" target="_self">Home</a></li>
+      <li><a href="menu.html" title="menu" target="_self">Menu</a></li>
+      <li><a href="activities.html" title="activities" target="_self">Activities Room</a></li>
+      <li><a href="contact.html" title="contact" target="_self">Contact</a></li>
+    </ul>
 
 <div class="info">
     <p><strong>Restaurant Hours:</strong></p>
